--- a/stylesheets/scss/components/_chips.scss
+++ b/stylesheets/scss/components/_chips.scss
@@ -20,62 +20,67 @@ $chips-delete-size: rem-calc(15px); // Default rem-calc(15px)
 	line-height: $chips-size;
 	padding: 0 rem-calc(12px);
 
-	&-deletable {
-		.sc-chip-delete {
-			@include border-radius(50%);
-			@include transition(color $transition-small-duration $standard-transition unquote(',') background $transition-small-duration $standard-transition);
-			background: $chips-delete-background;
-			color: $chips-delete-cross;
-			display: inline-block;
-			height: $chips-delete-size;
-			margin: 0 rem-calc(-8px) 0 rem-calc(4px);
-			line-height: $chips-delete-size;
-			text-align: center;
-			vertical-align: middle;
-			width: $chips-delete-size;
-			font-size: $chips-font-size;
-			cursor: pointer;
-
-			@media #{$medium-only} {
-				@include transition(color $transition-medium-duration $standard-transition unquote(',') background $transition-medium-duration $standard-transition);
-			}
-
-			@media #{$medium-up} {
-				@include transition(color $transition-large-duration $standard-transition unquote(',') background $transition-large-duration $standard-transition);
-			}
-		}
-
-		&:hover {
-			background: $chips-background-hover;
-			color: $chips-font-hover-color;
-
+	@if( in-array( 'deletable', $chip ) ) {
+		&-deletable {
 			.sc-chip-delete {
-				background: $chips-delete-background-hover;
-				color: $chips-delete-cross-hover;
+				@include border-radius(50%);
+				@include transition(color $transition-small-duration $standard-transition unquote(',') background $transition-small-duration $standard-transition);
+				background: $chips-delete-background;
+				color: $chips-delete-cross;
+				display: inline-block;
+				height: $chips-delete-size;
+				margin: 0 rem-calc(-8px) 0 rem-calc(4px);
+				line-height: $chips-delete-size;
+				text-align: center;
+				vertical-align: middle;
+				width: $chips-delete-size;
+				font-size: $chips-font-size;
+				cursor: pointer;
+
+				@media #{$medium-only} {
+					@include transition(color $transition-medium-duration $standard-transition unquote(',') background $transition-medium-duration $standard-transition);
+				}
+
+				@media #{$medium-up} {
+					@include transition(color $transition-large-duration $standard-transition unquote(',') background $transition-large-duration $standard-transition);
+				}
+			}
+
+			&:hover {
+				background: $chips-background-hover;
+				color: $chips-font-hover-color;
+
+				.sc-chip-delete {
+					background: $chips-delete-background-hover;
+					color: $chips-delete-cross-hover;
+				}
 			}
 		}
 	}
 
-	&-contact {
-		font-size: rem-calc(14px);
-		@include transition(box-shadow $transition-small-duration $standard-transition);
 
-		@media #{$medium-only} {
-			@include transition(box-shadow $transition-medium-duration $standard-transition);
-		}
+	@if( in-array( 'contact', $chip ) ) {
+		&-contact {
+			font-size: rem-calc(14px);
+			@include transition(box-shadow $transition-small-duration $standard-transition);
 
-		@media #{$medium-up} {
-			@include transition(box-shadow $transition-large-duration $standard-transition);
-		}
+			@media #{$medium-only} {
+				@include transition(box-shadow $transition-medium-duration $standard-transition);
+			}
 
-		img {
-			@include border-radius(50%);
-			@include square($chips-size);
-			margin: 0 rem-calc(8px) 0 rem-calc(-12px);
-		}
+			@media #{$medium-up} {
+				@include transition(box-shadow $transition-large-duration $standard-transition);
+			}
 
-		&:hover {
-			@include material-shadow(2);
+			img {
+				@include border-radius(50%);
+				@include square($chips-size);
+				margin: 0 rem-calc(8px) 0 rem-calc(-12px);
+			}
+
+			&:hover {
+				@include material-shadow(2);
+			}
 		}
 	}
 }
