--- a/stylesheets/scss/components/_colors-create.scss
+++ b/stylesheets/scss/components/_colors-create.scss
@@ -2,29 +2,47 @@
 @each $color-name, $color in $colors {
 	@if( in-array($color-name, $allowed-colors)) {
 		@each $color-type, $color-value in $color {
-			@if $color-type == 'base' {
-				.sc-#{$color-name} {
+			@if( $color-type == 'base' ) {
+				.sc-#{$color-name}, .sc-#{$color-name}-#{$color-type} {
 					background: $color-value;
 				}
 
-				.sc-#{$color-name}-text {
-					color: $color-value;
+				@if( in-array( 'text', $allowed-colors ) ) {
+					.sc-#{$color-name}-text, .sc-#{$color-name}-#{$color-type}-text {
+						color: $color-value;
+					}
 				}
 			} @else if $color-name == 'shades' {
 				.sc-#{$color-type} {
 					background: $color-value;
 				}
 
-				.sc-#{$color-type}-text {
-					color: $color-value;
+				@if( in-array( 'text', $allowed-colors ) ) {
+					.sc-#{$color-type}-text {
+						color: $color-value;
+					}
+				}
+			} @else if str_index( quote( $color-value ), 'a' ) {
+				@if( in-array( 'accent', $allowed-colors ) ) {
+					.sc-#{$color-name}-#{$color-type} {
+						background: $color-value;
+					}
+
+					@if( in-array( 'text', $allowed-colors ) ) {
+						.sc-#{$color-name}-#{$color-type}-text {
+							color: $color-value;
+						}
+					}
 				}
 			} @else {
 				.sc-#{$color-name}-#{$color-type} {
 					background: $color-value;
 				}
 
-				.sc-#{$color-name}-#{$color-type}-text {
-					color: $color-value;
+				@if( in-array( 'text', $allowed-colors ) ) {
+					.sc-#{$color-name}-#{$color-type}-text {
+						color: $color-value;
+					}
 				}
 			}
 		}
