--- a/stylesheets/scss/components/_shadows.scss
+++ b/stylesheets/scss/components/_shadows.scss
@@ -8,21 +8,7 @@
 @each $depth, $setting in $elevation-umbra-map {
 	@if( in-array( quote($depth), $shadow-depths ) ) {
 		.sc-z#{$depth} {
-			@include box-shadow(
-				#{map-get($elevation-umbra-map, $depth)} $elevation-umbra-color unquote(',')
-				#{map-get($elevation-penumbra-map, $depth)} $elevation-penumbra-color unquote(',')
-				#{map-get($elevation-ambient-map, $depth)} $elevation-ambient-color
-			);
-
-			@media #{$medium-up} {
-				@include box-shadow(
-					#{map-get($elevation-umbra-map, ( $depth - 2 ))} $elevation-umbra-color unquote(',')
-					#{map-get($elevation-penumbra-map, ( $depth - 2 ))} $elevation-penumbra-color unquote(',')
-					#{map-get($elevation-ambient-map, ( $depth - 2 ))} $elevation-ambient-color
-				);
-			}
+			@include material-shadow($depth);
 		}
 	}
 }
-
-// Return material shadow
