--- a/stylesheets/scss/components/_icons.scss
+++ b/stylesheets/scss/components/_icons.scss
@@ -8,7 +8,6 @@
 .material-icons {
 	font-size: $icon-size;
 	height: $icon-size;
-	vertical-align: $icon-align;
 	width: $icon-size;
 	color: if( $theme == light, rgba($black, .26), rgba($white, .3));
 
@@ -16,35 +15,43 @@
 		color: if( $theme == light, rgba($black, .54), rgba($white, 1));
 	}
 
-	/* Support for all WebKit browsers. */
+
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	vertical-align: middle;
+
+	/*!* Support for all WebKit browsers. *!
 	-webkit-font-smoothing: antialiased;
-	/* Support for Safari and Chrome. */
+	!* Support for Safari and Chrome. *!
 	text-rendering: optimizeLegibility;
 
-	/* Support for Firefox. */
+	!* Support for Firefox. *!
 	-moz-osx-font-smoothing: grayscale;
 
-	/* Support for IE. */
-	font-feature-settings: 'liga';
+	!* Support for IE. *!
+	font-feature-settings: 'liga';*/
 
-	&.sc-18 {
-		font-size: rem-calc(18px);
-		@include square(rem-calc(18px));
-	}
+	@if( in-array( 'sizes', $icons ) ) {
+		&.sc-18 {
+			font-size: rem-calc(18px);
+			@include square(rem-calc(18px));
+		}
 
-	&.sc-24 {
-		font-size: rem-calc(24px);
-		@include square(rem-calc(24px));
-	}
+		&.sc-24 {
+			font-size: rem-calc(24px);
+			@include square(rem-calc(24px));
+		}
 
-	&.sc-36 {
-		font-size: rem-calc(36px);
-		@include square(rem-calc(36px));
-	}
+		&.sc-36 {
+			font-size: rem-calc(36px);
+			@include square(rem-calc(36px));
+		}
 
-	&.sc-48 {
-		font-size: rem-calc(48px);
-		@include square(rem-calc(48px));
+		&.sc-48 {
+			font-size: rem-calc(48px);
+			@include square(rem-calc(48px));
+		}
 	}
 }
 
