--- a/stylesheets/scss/components/_buttons.scss
+++ b/stylesheets/scss/components/_buttons.scss
@@ -63,7 +63,7 @@ button, input[type="button"], input[type="reset"], input[type="submit"], a {
 				}
 			}
 
-			.sc-disabled, &:disabled {
+			&.sc-disabled, &:disabled {
 				background: $raised-disabled-background;
 				color: $raised-disabled-font-color;
 				@include material-shadow(0);
@@ -104,7 +104,7 @@ button, input[type="button"], input[type="reset"], input[type="submit"], a {
 				width: $flat-size;
 			}
 
-			.sc-disabled, &:disabled {
+			&.sc-disabled, &:disabled {
 				background: none;
 				color: $flat-disabled-color;
 
