--- a/stylesheets/scss/components/_menu.scss
+++ b/stylesheets/scss/components/_menu.scss
@@ -7,6 +7,7 @@
 .sc-menu {
 	background: var(--background, $background);
 	visibility: hidden;
+	@include font($font-size-menu, 0, $font-weight-menu, $line-height-menu, $font-color-menu, $letter-spacing-menu);
 	@include opacity(0);
 	position: absolute;
 	@include material-shadow(8);
