--- a/stylesheets/scss/components/_normalize.scss
+++ b/stylesheets/scss/components/_normalize.scss
@@ -37,10 +37,14 @@ h1, h2, h3, h4, h5, h6 {
 	word-wrap: break-word;
 }
 
-@include scrollbar();
+@if( in-array( 'scrollbar', $normalize ) ) {
+	@include scrollbar();
+}
 
-@include selection() {
-	background: $select-background;
+@if( in-array( 'selection', $normalize ) ) {
+	@include selection() {
+		background: $select-background;
+	}
 }
 
 * {
@@ -74,50 +78,52 @@ main {
 	bottom: 0;
 	left: 0;
 	overflow: auto;
-	padding: $gutter ($gutter / 2);
+	padding: ($gutter / 2);
 	position: fixed;
 	right: 0;
-	top: rem-calc(48px);
+	top: $appbar-mobile-portrait-height;
 
 	@media only screen and (orientation: landscape) and (max-width: #{$small-screen}) {
-		top: rem-calc(48px);
-		padding: $gutter ($gutter / 2);
+		top: $appbar-mobile-landscape-height;
+		padding: ($gutter / 2);
 	}
 
 	@media only screen and (orientation: portrait) and (max-width: #{$xsmall-screen}) {
-		top: rem-calc(56px);
-		padding: $gutter ($gutter / 2);
+		top: $appbar-mobile-portrait-height;
+		padding: ($gutter / 2);
 	}
 
 	@media #{$small-up} {
-		top: rem-calc(64px);
+		top: $appbar-large-height;
 		left: $drawer-small-width;
-		padding: $large-gutter ($large-gutter / 2);
+		padding: ($large-gutter / 2);
 	}
 }
 
-.sc-circle {
-	@include border-radius(50%);
-}
+@if( in-array( 'helper-classes', $normalize ) ) {
+	.sc-circle {
+		@include border-radius(50%);
+	}
 
-.sc-left {
-	float: left;
-}
+	.sc-left {
+		float: left;
+	}
 
-.sc-right {
-	float: right;
-}
+	.sc-right {
+		float: right;
+	}
 
-.sc-center {
-	text-align: center;
-	vertical-align: middle;
-}
+	.sc-center {
+		text-align: center;
+		vertical-align: middle;
+	}
 
-.sc-divider {
-	background: if( $theme == light, rgba($black, .12), rgba($white, .12) );
-	height: var(--border-size, $border-size) / 2;
-}
+	.sc-divider {
+		background: if($theme == light, rgba($black, .12), rgba($white, .12));
+		height: var(--border-size, $border-size) / 2;
+	}
 
-.sc-trigger {
-	cursor: pointer;
+	.sc-trigger {
+		cursor: pointer;
+	}
 }
